# study-ai

langchain_ollama_llama3/: pyproject.toml
langchain_ollama_llama3/langchain_ollama_llama3/: 01. llm_chain.py  02. llm_chain_with_prompt.py  03. llm_multi_chain.py  04. prompt_template.py  05. chat_prompt_template.py
