[tool.poetry]
name = "langchain-ollama-llama3"
version = "0.1.0"
description = ""
authors = ["DarkKaiser <darkkaiser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
langchain-community = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
